// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: branches disabled 1`] = `
<ul
  className="side-tabs-menu"
>
  <li
    key="CAT_2"
  >
    <IndexLink
      className=""
      title="CAT_2_NAME"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": "cat_2",
          },
        }
      }
    >
      CAT_2_NAME
    </IndexLink>
  </li>
  <li
    key="general"
  >
    <IndexLink
      className=""
      title="general"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": undefined,
          },
        }
      }
    >
      general
    </IndexLink>
  </li>
</ul>
`;

exports[`should render correctly: global mode 1`] = `
<ul
  className="side-tabs-menu"
>
  <li
    key="CAT_1"
  >
    <IndexLink
      className=""
      title="CAT_1_NAME"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": "cat_1",
          },
        }
      }
    >
      CAT_1_NAME
    </IndexLink>
  </li>
  <li
    key="CAT_2"
  >
    <IndexLink
      className=""
      title="CAT_2_NAME"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": "cat_2",
          },
        }
      }
    >
      CAT_2_NAME
    </IndexLink>
  </li>
  <li
    key="general"
  >
    <IndexLink
      className=""
      title="general"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": undefined,
          },
        }
      }
    >
      general
    </IndexLink>
  </li>
</ul>
`;

exports[`should render correctly: project mode 1`] = `
<ul
  className="side-tabs-menu"
>
  <li
    key="CAT_1"
  >
    <IndexLink
      className=""
      title="CAT_1_NAME"
      to={
        Object {
          "pathname": "/project/settings",
          "query": Object {
            "category": "cat_1",
            "id": "my-project",
          },
        }
      }
    >
      CAT_1_NAME
    </IndexLink>
  </li>
  <li
    key="CAT_3"
  >
    <IndexLink
      className=""
      title="CAT_3_NAME"
      to={
        Object {
          "pathname": "/project/settings",
          "query": Object {
            "category": "cat_3",
            "id": "my-project",
          },
        }
      }
    >
      CAT_3_NAME
    </IndexLink>
  </li>
  <li
    key="general"
  >
    <IndexLink
      className=""
      title="general"
      to={
        Object {
          "pathname": "/project/settings",
          "query": Object {
            "category": undefined,
            "id": "my-project",
          },
        }
      }
    >
      general
    </IndexLink>
  </li>
</ul>
`;

exports[`should render correctly: selected category 1`] = `
<ul
  className="side-tabs-menu"
>
  <li
    key="CAT_1"
  >
    <IndexLink
      className=""
      title="CAT_1_NAME"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": "cat_1",
          },
        }
      }
    >
      CAT_1_NAME
    </IndexLink>
  </li>
  <li
    key="CAT_2"
  >
    <IndexLink
      className="active"
      title="CAT_2_NAME"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": "cat_2",
          },
        }
      }
    >
      CAT_2_NAME
    </IndexLink>
  </li>
  <li
    key="general"
  >
    <IndexLink
      className=""
      title="general"
      to={
        Object {
          "pathname": "/admin/settings",
          "query": Object {
            "category": undefined,
          },
        }
      }
    >
      general
    </IndexLink>
  </li>
</ul>
`;
